<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/menu_1"
        android:title="@string/caoliu_tit">
    </item>

    <item
        android:id="@+id/menu_2"
        android:title="@string/porn_video" />

    <item
        android:id="@+id/menu_3"
        android:title="@string/porn_photo" />

    <item
        android:id="@+id/menu_4"
        android:title="@string/heil_video" />

    <item
        android:id="@+id/menu_5"
        android:title="@string/qing_items" />

    <item
        android:id="@+id/menu_6"
        android:title="@string/remen_items" />

    <item
        android:id="@+id/menu_7"
        android:title="@string/fenlei_items" />

    <item
        android:id="@+id/menu_8"
        android:title="@string/more_items" />

    <item
        android:id="@+id/menu_9"
        android:title="@string/share_items" />
</menu>